feat: 完成音色模块的开发以及语音对话模块的基础搭建